# final-project-toffeegryphon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: epidemic.cc
include/: city.h  configuration.h  epidemic_app.h  hand.h  individual.h  isolation.h  location.h  route.h  scene_manager.h  utils.h  view.h
include/scenes/: end.h  game.h  menu.h
src/: city.cc  configuration.cc  epidemic_app.cc  hand.cc  individual.cc  isolation.cc  location.cc  route.cc  scene_manager.cc  utils.cc  view.cc
src/scenes/: end.cc  game.cc  menu.cc
tests/: city_test.cc  configuration_test.cc  hand_test.cc  individual_test.cc  isolation_test.cc  route_test.cc  scene_manager_test.cc  utils_test.cc  view_test.cc
tests/scenes_test/: game_test.cc  menu_test.cc
